[metadata]
name        = pycerberus
description = Highly flexible input validation library
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = MIT
home-page   = https://github.com/FelixSchwarz/pycerberus
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
# simple_super is not zip_safe, neither is the current gettext implementation
zip_safe = false
include_package_data = true

[options.packages.find]
exclude =
    tests

[options.package_data]
pycerberus = locales/*/LC_MESSAGES/pycerberus.mo


[extract_messages]
copyright_holder = Felix Schwarz
msgid_bugs_address = felix.schwarz@oss.schwarz.eu
keywords = _ ngettext:1,2 N_ tag_ tagn_:1,2
add_comments = TRANSLATOR:
output_file = pycerberus/locales/pycerberus.pot

[init_catalog]
input_file = pycerberus/locales/pycerberus.pot
output_dir = pycerberus/locales
domain = pycerberus

[update_catalog]
input_file = pycerberus/locales/pycerberus.pot
output_dir = pycerberus/locales
domain = pycerberus

[compile_catalog]
directory = pycerberus/locales
domain = pycerberus

[bdist_wheel]
universal = 1
