[metadata]
name        = pycerberus
version     = file: VERSION.txt
description = Highly flexible input validation library

long_description = file:README.md
long_description_content_type = text/markdown

author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = MIT
home-page   = https://github.com/FelixSchwarz/pycerberus
project_urls =
    Source Code = https://github.com/FelixSchwarz/pycerberus
    Bug Tracker = https://github.com/FelixSchwarz/pycerberus/issues
    Documentation = https://pycerberus.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
# simple_super is not zip_safe, neither is the current gettext implementation
zip_safe = false
include_package_data = true
install_requires =
    six

[options.packages.find]
exclude =
    tests

[options.extras_require]
i18n = Babel >= 0.9.5
testing =
    Babel >= 0.9.5
    PythonicTestcase >= 1.1.0  # assert_raises with context_manager

[options.package_data]
pycerberus = locales/*/LC_MESSAGES/pycerberus.mo


[bdist_wheel]
universal = 1
